--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,16 @@
 /* add CSS class and element and selectors here */
+    body {
+      background-color: red;
+      color: green;
+      text-shadow: 2px 2px #ff0000;
+      text-align: center;
+    }
+    h3 {
+      font-size: 300%;
+    }
+    
+    div {
+      border: 2px solid blue;
+    }
+    
+    
