--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,16 @@
 /* add CSS class and element and selectors here */
+body {
+  background-color: lightblue;
+  font-size: 150%;
+}
+
+.myClass{
+  font-size: 500%;
+  background-color: rgb(0,250,0);
+  border: 100px dotted fuchsia;
+  text-transform: lowercase;
+}
+
+.mySpace{
+  border: 8px dashed rgb(200,47,75);
+}
